# src/models/User.ts
@@ -1,44 +1,32 @@
-import { DataTypes, Model } from 'sequelize';
-import sequelize from '@/config/database';
+import mongoose, { Schema, Document } from 'mongoose';
 
-class User extends Model {
-  public id!: number;
-  public name!: string;
-  public email!: string;
-  public password?: string | null;
+export interface IUser extends Document {
+  name: string;
+  email: string;
+
+  createdAt: Date;
+  deletedAt?: Date | null;
 }
 
-User.init(
-  {
-    id: {
-      type: DataTypes.INTEGER,
-      autoIncrement: true,
-      primaryKey: true,
-    },
-    name: {
-      type: DataTypes.STRING,
-      allowNull: false,
-    },
-    email: {
-      type: DataTypes.STRING,
-      allowNull: false,
-      unique: true,
-    },
-    password: {
-      type: DataTypes.STRING,
-      allowNull: true,
-    },
-    deletedAt: {
-      type: DataTypes.DATE,
-      allowNull: true,
-    },
+const UserSchema: Schema = new Schema({
+  name: {
+    type: String,
+    required: true,
   },
-  {
-    sequelize,
-    tableName: 'users',
-    underscored: true,
-    paranoid: true,
+  email: {
+    type: String,
+    required: true,
+    unique: true,
   },
-);
 
-export default User;
+  createdAt: {
+    type: Date,
+    default: Date.now,
+  },
+  deletedAt: {
+    type: Date,
+    default: null,
+  },
+});
+
+export default mongoose.model<IUser>('User', UserSchema);
